# es_command

./: .gitignore  Cargo.toml  README.md  multi_hello.json  single_hello.json
.github/workflows/: rust.yml
src/: actions.rs  fs.rs  main.rs  types.rs
tests/: multi.json  single.json
tests/server/cmd/server/: main.go
